fix: project completed

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h1>Commons Mobs in Minecraft</h1>
         <p class="link p-first">Page is intended to show the 4 most common Minecraft mobs to find. If you want to know more about Minecraft, register below.</p>
         <button type="button" class="description-button">Sign Up</button>
-        <div class="image-description">
-          <img class="image"src="minecraft-mobs.jpg" alt="Steve and a zombie fighting" width="400">
-        </div>
+      </div>
+      <div class="image-description">
+        <img class="image"src="minecraft-mobs.jpg" alt="Steve and a zombie fighting" width="325">
       </div>
     </div>
   </div>
@@ -37,20 +37,28 @@
     <h2>The 4 commons mobs in Minecraft</h2>
     <div class="row-of-green-divs">
       <div class="box-green-msg">
-        <div class="box-green"></div>
-        <p class="p-second"><img src="Zombie_JE3_BE2.jpg" width="150" height="200">The zombie</p>
+        <div class="box-green">
+        <img src="Zombie_JE3_BE2.jpg" width="150" height="200">
+      </div>
+      <p class="p-second">The zombie</p>
       </div>
       <div class="box-green-msg">
-        <div class="box-green"></div>
-        <p class="p-second"><img src="skeleton.jpg" width="150" height="200">The skeleton</p>
+        <div class="box-green">
+        <img src="skeleton.jpg" width="150" height="200">
+      </div>
+      <p class="p-second">The skeleton</p>
       </div>
       <div class="box-green-msg">
-        <div class="box-green"></div>
-        <p class="p-second"><img src="Creeper.jpg" width="150" height="200">The creeper</p>
+        <div class="box-green">
+        <img src="Creeper.jpg" width="150" height="200">
+      </div>
+      <p class="p-second">The creeper</p>
       </div>
       <div class="box-green-msg">
-        <div class="box-green"></div>
-        <p class="p-second"><img src="Spider_JE4_BE3.jpg" width="150" height="200">The spider</p>
+        <div class="box-green">
+        <img src="Spider_JE4_BE3.jpg" width="150" height="200">
+        </div>
+        <p class="p-second">The spider</p>
       </div>
     </div>
   </div>
@@ -79,7 +87,7 @@
   </div>
 
   <div class="copyright-container">
-    Copyright © WikiCraft 2023
+    Copyright © WikiCraft 2024
   </div>
 </body>
 </html>
